<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.CreateProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/create_profile"
            android:textColor="#000000"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:gravity="center_horizontal"
            android:text="@string/please_enter_your_personal_details_to_create_your_profile"
            android:textColor="#212121"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/create_profile_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/date_of_birth"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/create_profile_dob_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dd_mm_yyyy"
                android:padding="4dp"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/create_profile_mobile_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_call"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_mobile"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/create_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="#3F51B5"
            android:text="@string/create_profile"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/create_profile_progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
