<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".activity.AccountActivity">

    <TextView
        android:id="@+id/my_profile_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/my_profile"
        android:textColor="#000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/my_recipes_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_menu_north_indian"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/my_recipes"
        android:textColor="#000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/change_password_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/change_password"
        android:textColor="#000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/sign_out_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_logout"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/sign_out"
        android:textColor="#000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ProgressBar
        android:id="@+id/account_activity_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>